{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 111,
  "lineage": "26ae21c9-5e0b-961e-2a9f-732ac9b3ea81",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/19c280ca-8596-4baa-8ef2-c835a0987300/resourceGroups/remdro_rgroup_02/providers/Microsoft.Network/networkInterfaces/remdro_nic_01",
            "internal_domain_name_suffix": "k03jkh5hwr2eba0to2iaydgcgh.oslx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "remdro_nic_01_conf",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/19c280ca-8596-4baa-8ef2-c835a0987300/resourceGroups/remdro_rgroup_02/providers/Microsoft.Network/publicIPAddresses/remdro_pubip_01",
                "subnet_id": "/subscriptions/19c280ca-8596-4baa-8ef2-c835a0987300/resourceGroups/remdro_rgroup_02/providers/Microsoft.Network/virtualNetworks/remdro_vnet_01/subnets/remdro_subnet_01"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "norwayeast",
            "name": "remdro_nic_01",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "remdro_rgroup_02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.public_ip_01",
            "azurerm_resource_group.resource_group_1",
            "azurerm_subnet.subnet_01",
            "azurerm_virtual_network.vnetwork_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/19c280ca-8596-4baa-8ef2-c835a0987300/resourceGroups/remdro_rgroup_02/providers/Microsoft.Network/networkInterfaces/remdro_nic_02",
            "internal_domain_name_suffix": "k03jkh5hwr2eba0to2iaydgcgh.oslx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "remdro_nic_02_conf",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/19c280ca-8596-4baa-8ef2-c835a0987300/resourceGroups/remdro_rgroup_02/providers/Microsoft.Network/virtualNetworks/remdro_vnet_01/subnets/remdro_subnet_02"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "norwayeast",
            "name": "remdro_nic_02",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "remdro_rgroup_02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.resource_group_1",
            "azurerm_subnet.subnet_02",
            "azurerm_virtual_network.vnetwork_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic_01_nsg_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/19c280ca-8596-4baa-8ef2-c835a0987300/resourceGroups/remdro_rgroup_02/providers/Microsoft.Network/networkInterfaces/remdro_nic_01|/subscriptions/19c280ca-8596-4baa-8ef2-c835a0987300/resourceGroups/remdro_rgroup_02/providers/Microsoft.Network/networkSecurityGroups/remdro_subnet_01_nsg",
            "network_interface_id": "/subscriptions/19c280ca-8596-4baa-8ef2-c835a0987300/resourceGroups/remdro_rgroup_02/providers/Microsoft.Network/networkInterfaces/remdro_nic_01",
            "network_security_group_id": "/subscriptions/19c280ca-8596-4baa-8ef2-c835a0987300/resourceGroups/remdro_rgroup_02/providers/Microsoft.Network/networkSecurityGroups/remdro_subnet_01_nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.nic_01",
            "azurerm_network_security_group.nsg_01",
            "azurerm_public_ip.public_ip_01",
            "azurerm_resource_group.resource_group_1",
            "azurerm_subnet.subnet_01",
            "azurerm_virtual_network.vnetwork_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic_02_nsg_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/19c280ca-8596-4baa-8ef2-c835a0987300/resourceGroups/remdro_rgroup_02/providers/Microsoft.Network/networkInterfaces/remdro_nic_02|/subscriptions/19c280ca-8596-4baa-8ef2-c835a0987300/resourceGroups/remdro_rgroup_02/providers/Microsoft.Network/networkSecurityGroups/remdro_subnet_02_nsg",
            "network_interface_id": "/subscriptions/19c280ca-8596-4baa-8ef2-c835a0987300/resourceGroups/remdro_rgroup_02/providers/Microsoft.Network/networkInterfaces/remdro_nic_02",
            "network_security_group_id": "/subscriptions/19c280ca-8596-4baa-8ef2-c835a0987300/resourceGroups/remdro_rgroup_02/providers/Microsoft.Network/networkSecurityGroups/remdro_subnet_02_nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.nic_02",
            "azurerm_network_security_group.nsg_02",
            "azurerm_resource_group.resource_group_1",
            "azurerm_subnet.subnet_02",
            "azurerm_virtual_network.vnetwork_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/19c280ca-8596-4baa-8ef2-c835a0987300/resourceGroups/remdro_rgroup_02/providers/Microsoft.Network/networkSecurityGroups/remdro_subnet_01_nsg",
            "location": "norwayeast",
            "name": "remdro_subnet_01_nsg",
            "resource_group_name": "remdro_rgroup_02",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.resource_group_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/19c280ca-8596-4baa-8ef2-c835a0987300/resourceGroups/remdro_rgroup_02/providers/Microsoft.Network/networkSecurityGroups/remdro_subnet_02_nsg",
            "location": "norwayeast",
            "name": "remdro_subnet_02_nsg",
            "resource_group_name": "remdro_rgroup_02",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.2.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.resource_group_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/19c280ca-8596-4baa-8ef2-c835a0987300/resourceGroups/remdro_rgroup_02/providers/Microsoft.Network/publicIPAddresses/remdro_pubip_01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.100.168.189",
            "ip_version": "IPv4",
            "location": "norwayeast",
            "name": "remdro_pubip_01",
            "resource_group_name": "remdro_rgroup_02",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.resource_group_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/19c280ca-8596-4baa-8ef2-c835a0987300/resourceGroups/remdro_rgroup_02/providers/Microsoft.Network/virtualNetworks/remdro_vnet_01/subnets/remdro_subnet_01",
            "name": "remdro_subnet_01",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "remdro_rgroup_02",
            "virtual_network_name": "remdro_vnet_01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.resource_group_1",
            "azurerm_virtual_network.vnetwork_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/19c280ca-8596-4baa-8ef2-c835a0987300/resourceGroups/remdro_rgroup_02/providers/Microsoft.Network/virtualNetworks/remdro_vnet_01/subnets/remdro_subnet_02",
            "name": "remdro_subnet_02",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "remdro_rgroup_02",
            "virtual_network_name": "remdro_vnet_01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.resource_group_1",
            "azurerm_virtual_network.vnetwork_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnetwork_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1f95ba56-b4e7-4078-8353-77100c0cc237",
            "id": "/subscriptions/19c280ca-8596-4baa-8ef2-c835a0987300/resourceGroups/remdro_rgroup_02/providers/Microsoft.Network/virtualNetworks/remdro_vnet_01",
            "location": "norwayeast",
            "name": "remdro_vnet_01",
            "resource_group_name": "remdro_rgroup_02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.resource_group_1"
          ]
        }
      ]
    }
  ]
}